assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }


     /* apply styles to <header> */
  header {
    padding: 20px 35px;
    background-color: #39a6b2;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  header a {
    text-decoration: none;
    color: #fce138;
  }

  header nav {
    margin: 7px 0;
  }

  header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
  }

  header nav ul li a {
    margin: 0 30px;
    font-weight: lighter;
    font-size: 1.55vw;
  }

  header h1 {
    font-weight: bold;
    font-size: 36px;
    color: #fce138;
    margin: 0;
    
  }

  div h3 {
    margin: 0%;
    font-size: 30px;
  }

  body {
    /* more on this crazy alphanumerical value in a minute! */
    color: #39a6b2;
    font-family: Helvetica, Arial, sans-serif;
  }

  footer {
    background: #024e76;
    width: 100%;
    padding: 40px 35px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  footer h2 {
    
    color: #fce138;
    font-size: 30px;
    margin: 0;
  }

  footer div {
    
    line-height: 1.5;
    text-align: right;
    color: #fce138;
  }
  
  footer a {
    color:#fce138;
  }
  

  /* Hero Style Start */
  .hero  {
    background-image: url("./images/hero-bg.jpg");
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
  } 

  

  .hero-cta {
    width: 35%;
    text-align: right;
    margin: 3.5%;
    color: #fff;
    font-size: 18px;
    line-height: 1.3;
  }

  .hero-cta h2 {
    font-style: italic;
    font-size: 55px;
    color: #fce138;
  }


  .hero-cta p {
    color: white;
  }

  .hero-form {
    /* Shorthand for border-style, border-width and border-color */
    border: solid 3px #024e76;
    background-color: #fce138;
    padding: 20px;
    color: #024e76;
    width: 40%;
    margin: 3.5%;
  }

  .hero-form h3 {
    font-size: 24px;
    margin: 0;
  }

  .hero-form p {
    margin: 5px 0 15px 0;
  }

  .form-input {
    border: 1px solid #024e76;
    display: block;
    padding: 7px 15px;
    font-size: 16px;
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;

  }

  .hero-form label {
    margin: 0 5px;
  }
  .hero-form button {
    color: #fce138;
    background-color: #024e76;
    padding: 10px 20px;
    font-size: 16px;
    border: none;
  }

  /* HERO STYLES END */

  /* Sections */

  section {
    padding: 60px;
    
  }

  .section-title {
    font-size: 55px;
    border-bottom: 3px solid;
    padding-bottom: 20px;
    text-align: center;
    margin: 0 auto 35px auto;
    width: 50%;
  }
  
  .primary-border {
    border-color: #fce138;
  }
  
  .secondary-border {
    border-color: #39a6b2;
  }

  /* What We Do Section */



  .intro p {
    line-height: 1.7;
    color: #39a6b2;
    width: 80%;
    font-size: 20px;
    margin: 0 auto;
    text-align: center;
  }

 

  /* What you do section */

  .steps {
    background-color: #fce138;
  }

  .step {
    margin: 50px auto;
    padding-bottom: 50px;
    width: 80%;
    border-bottom: 1px solid #39a6b2;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    background-color: #fce138;
  }

 

  .step h3 {
    color: #024e76;
    font-size: 46px;
    flex: 1 30%;
    
  }

  .step-info {
    flex: 2 70%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
  }

  .step-text h4 {
    font-size: 26px;
    line-height: 1.5;
    color: #024e76;
  }

  .step-text {
    flex: 12;
  }

  .step-text p {
    color: #39a6b2;
    font-size: 18px;
  }

  .step-img {
    flex: 1 12%;
    margin-right: 20px;
  }

  .step-img img {
    max-width: 100%;
  }

  /*Trainers Section */

  .trainers {
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
  }

  .trainer {
    margin: 20px;
    background: #024e76;
    color: #fce138;
    flex: 1;
  }

  .trainer img {
    width: 100%;
    
  }
  
  .trainer-bio {
    padding: 25px;
    line-height: 1.3;
  }

  

  .trainer-bio h3 {
    font-size: 28px;
    
  }
  
  .trainer-bio h4 {
    font-weight: lighter;
    font-size: 22px;
    margin-bottom: 15px;
  }
  
  .trainer-bio p {
    font-size: 17px;
    
  }

  /* REACH OUT STYLES START */

  .contact {
    background-color: #024e76;
    
  }
  
  .contact h2{
    color: #fce138;
  }

  .contact-info > * {
    flex: 1;
    margin: 15px;
  }

  .contact-info {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  
  
  .contact-info iframe {
    height:400px;
  
  }

  .contact-info div {
    color: white;
  
  }

  .contact h3 {
    color: #fce138;
    font-size: 32px;
  }

  .contact-info p, .contact-info address {
    margin: 20px 0;
    line-height: 1.5;
    font-size: 16px;
    font-style: normal;
    color: white;
  
  }

.contact-form input, .contact-form textarea {
    border: 1px solid #024e76;
    display: block;
    padding: 7px 15px;
    font-size: 16px;
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;
    margin-top: 5px;
  }

  .contact-form button {
    width: 100%;
    border: none;
    background: #fce138;
    
    text-align: center;
    padding: 15px 0;
    font-size: 16px;
  }

  .contact-info a {
    color: #fce138;
  }

  /* REACH OUT STYLES END */ 

  .text-left {
    text-align: left;
  }
  
  .text-right {
    text-align: right;
  }

  .flex-row {
    display: flex;
  }

